--- a/src/app/places/expenses/expenses.page.html
+++ b/src/app/places/expenses/expenses.page.html
@@ -13,17 +13,27 @@
 </ion-header>
         
         <ion-content>
-            ADD FILTER BY CATEGORY HERE
-        <!-- <ion-row>
+        <ion-row>
             <ion-col size-sm="12" offset-sm="0">
-                <ion-item *ngIf="(properties$ | async) as properties">
-                    <ion-label></ion-label>
-                    <ion-select value="propertyId" okText="Okay" cancelText="Dismiss">
-                    <ion-select-option *ngFor="let property of properties" [value]="property.id">{{property.address}}</ion-select-option>
+                <ion-item>
+                    <ion-label>Filter By Category</ion-label>
+                    <ion-select value="category" okText="Okay" cancelText="Dismiss">
+                    <ion-select-option *ngFor="let category of expenseCategories" [value]="category">{{category}}</ion-select-option>
                     </ion-select>
                 </ion-item>
             </ion-col>
-        </ion-row> -->
+        </ion-row>
+
+        <ion-row>
+            <ion-col size-sm="12" offset-sm="0">
+                <ion-item>
+                    <ion-label>Filter By Property</ion-label>
+                    <ion-select value="propertyId" okText="Okay" cancelText="Dismiss">
+                    <ion-select-option *ngFor="let property of (properties$ | async)" [value]="property.id">{{property.address}}</ion-select-option>
+                    </ion-select>
+                </ion-item>
+            </ion-col>
+        </ion-row>
 
         <ion-grid>
             <ion-row>
@@ -31,17 +41,9 @@
                 <ion-list>
                 <ion-item-sliding *ngFor="let expense of (expenses$ | async)" #slidingItem>
                     <ion-item  [routerLink]="['/', 'places', 'tabs', 'expenses', expense.id]">
-                        <!-- <ion-thumbnail slot="start">
-                            <ion-img [src]="expense.imageUrl"></ion-img>
-                        </ion-thumbnail> -->
                         <ion-label>
                             <h4>{{expense.amount | currency:'US'}}</h4>
                             <div class="expense-details">
-                            <!-- <ion-icon name="calendar" color="secondary"></ion-icon> -->
-                            <!-- <ion-text color="tertiary" class="space-left">{{tenant.availableFrom | date}}</ion-text>
-                            <span class="space-left">to</span>
-                            <ion-icon name="calendar" class="space-left" color="secondary"></ion-icon>
-                            <ion-text color="tertiary" class="space-left">{{tenant.availableTo | date}}</ion-text> -->
                             </div>
                         </ion-label>
                     </ion-item>
